# iqr_topgear

./: README.md
iqr_topgear_bringup/: CMakeLists.txt  package.xml
iqr_topgear_bringup/launch/: bringup.launch
iqr_topgear_bringup/launch/include/: husky.launch.xml  jackal.launch.xml  kinect_dk.launch.xml  pointcloud_to_laserscan.launch.xml
iqr_topgear_bringup/rules/: 99-iqr-controller.rules  99-iqr.rules
iqr_topgear_bringup/script/: init_ptpd.bash  install_dk_driver.bash  install_ouster_driver.bash  setup_can0.bash
iqr_topgear_description/: CMakeLists.txt  package.xml
iqr_topgear_description/launch/: view_model.launch  view_robot.launch
iqr_topgear_description/rviz/: view_model.rviz  view_robot.rviz
iqr_topgear_description/urdf/: iqr_bunker_robot.urdf.xacro  iqr_husky_robot.urdf.xacro  iqr_jackal_robot.urdf.xacro  iqr_scout_robot.urdf.xacro  kinect_dk.xacro  sensor_support.xacro
iqr_topgear_description/urdf/mesh/: forward_gps_antenna.stl
iqr_topgear_navigation/: CMakeLists.txt  package.xml
iqr_topgear_navigation/config/move_base_config/: bunker_costmap_common_params.yaml  husky_costmap_common_params.yaml  jackal_costmap_common_params.yaml
iqr_topgear_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  robot_localization.launch
iqr_topgear_navigation/launch/include/: move_base.launch
